--- a/Practica16/pom.xml
+++ b/Practica16/pom.xml
@@ -9,6 +9,11 @@
 
   <name>Practica16</name>
   <url>http://maven.apache.org</url>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.2.0</version>
+    </parent>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
